Migrated text formatting facility from deprecated `pl.chilldev.web` project.

--- a/commons-text/pom.xml
+++ b/commons-text/pom.xml
@@ -43,6 +43,21 @@
         </plugins>
     </build>
 
+    <!-- project dependencies -->
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.pegdown</groupId>
+            <artifactId>pegdown</artifactId>
+            <version>1.6.0</version>
+        </dependency>
+    </dependencies>
+
     <!-- build profiles -->
     <profiles>
         <profile>
