--- a/commons-collections/pom.xml
+++ b/commons-collections/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>pl.chilldev.commons</groupId>
         <artifactId>commons</artifactId>
-        <version>0.2.0-SNAPSHOT</version>
+        <version>0.2.0</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
-            <version>1.12.3.RELEASE</version>
+            <version>1.12.5.RELEASE</version>
         </dependency>
     </dependencies>
 
