--- a/commons-web/pom.xml
+++ b/commons-web/pom.xml
@@ -46,6 +46,18 @@
     <!-- project dependencies -->
     <dependencies>
         <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>commons-daemon</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>9.4.0.v20161208</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
             <version>1.7.21</version>
