--- a/commons-data/pom.xml
+++ b/commons-data/pom.xml
@@ -37,11 +37,26 @@
                 <artifactId>versioneye-maven-plugin</artifactId>
                 <inherited>false</inherited>
                 <configuration>
-                    <projectId>55e2bf2ec6d8f2001d000327</projectId>
+                    <projectId>5900ed846ac17142da9c8a9a</projectId>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <!-- project dependencies -->
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>1.13.3.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.hateoas</groupId>
+            <artifactId>spring-hateoas</artifactId>
+            <version>0.23.0.RELEASE</version>
+        </dependency>
+    </dependencies>
 
     <!-- build profiles -->
     <profiles>
