AWS integration helpers, mainly for developing lean Lambdas.

--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,7 @@
 
     <!-- components of ChillDev-Commons project -->
     <modules>
+        <module>commons-aws</module>
         <module>commons-daemon</module>
         <module>commons-data</module>
         <module>commons-db</module>
