--- a/commons-text/pom.xml
+++ b/commons-text/pom.xml
@@ -47,8 +47,8 @@
     <dependencies>
         <dependency>
             <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.6</version>
+            <artifactId>commons-text</artifactId>
+            <version>1.1</version>
         </dependency>
 
         <dependency>
