Simplified pipeline to reduce number of CI builds during deployment.

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,10 @@ sudo: false
 
 dist: "trusty"
 
+branches:
+    except:
+        - "/^release-/"
+
 jdk:
     - "openjdk8"
     - "oraclejdk8"
@@ -86,7 +90,7 @@ deploy:
         file_glob: true
         file: "*/target/*.jar"
         on:
-            tags: true
+            branch: "master"
             jdk: "oraclejdk8"
 
 cache:
