--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>pl.chilldev.parent</groupId>
         <artifactId>parent-opensource</artifactId>
-        <version>0.4.2</version>
+        <version>0.4.3</version>
     </parent>
 
     <!-- project meta info -->
@@ -103,7 +103,7 @@
         </snapshotRepository>
         <site>
             <id>github</id>
-            <url>git:ssh://git@github.com/chilloutdevelopment/pl.chilldev.commons.git?gh-pages#</url>
+            <url>github:http://chilloutdevelopment.github.io/pl.chilldev.commons/</url>
         </site>
     </distributionManagement>
 
