--- a/.travis.yml
+++ b/.travis.yml
@@ -61,6 +61,8 @@ before_deploy:
     - "git config user.email \"office@chilldev.pl\""
     - "openssl aes-256-cbc -k \"${SECRET}\" -in .travis/gpg_key.enc -out .travis/gpg_key -d"
     - "openssl aes-256-cbc -k \"${SECRET}\" -in .travis/id_rsa.enc -out .travis/id_rsa -d"
+    # this is needed to avoid duplicated key error as we have two deploys on `master`
+    - "rm -f ~/.gnupg/*.gpg"
     - "gpg --fast-import .travis/gpg_key"
     - "chmod 600 .travis/id_rsa"
     - "ssh-add .travis/id_rsa"
