--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,12 @@ branches:
 jdk:
     - "openjdk8"
     - "oraclejdk8"
+    - "oraclejdk9"
+
+# TODO: temporary as delombok won't work here
+matrix:
+    allow_failures:
+        jdk: "oraclejdk9"
 
 env:
     global:
