--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
     <groupId>pl.chilldev.commons</groupId>
     <artifactId>commons</artifactId>
     <packaging>pom</packaging>
-    <version>0.2.6-SNAPSHOT</version>
+    <version>0.3.0-SNAPSHOT</version>
     <parent>
         <groupId>pl.chilldev.parent</groupId>
         <artifactId>parent-opensource</artifactId>
-        <version>0.4.6</version>
+        <version>0.4.11</version>
     </parent>
 
     <!-- project meta info -->
@@ -126,9 +126,11 @@
     <!-- components of ChillDev-Commons project -->
     <modules>
         <module>commons-aws</module>
+        <module>commons-client</module>
         <module>commons-daemon</module>
         <module>commons-data</module>
         <module>commons-db</module>
+        <module>commons-jwt</module>
         <module>commons-text</module>
         <module>commons-web</module>
     </modules>
