--- a/commons-aws/pom.xml
+++ b/commons-aws/pom.xml
@@ -45,6 +45,12 @@
 
         <dependency>
             <groupId>com.amazonaws</groupId>
+            <artifactId>aws-lambda-java-core</artifactId>
+            <version>1.2.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.amazonaws</groupId>
             <artifactId>aws-lambda-java-events</artifactId>
             <version>2.1.0</version>
             <exclusions>
@@ -80,6 +86,12 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.9.5</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.sunrun</groupId>
+            <artifactId>cfn-response</artifactId>
+            <version>1.0.2</version>
         </dependency>
 
         <dependency>
