--- a/.travis.yml
+++ b/.travis.yml
@@ -44,7 +44,7 @@ matrix:
 
 env:
     global:
-        - "AWS_DEFAULT_REGION=eu-central-1"
+        - "AWS_REGION=eu-central-1"
         -
             secure: |-
                 RWVCMZ942ezUNvxDD54WHFy3PNN68wN8l3IcSeXmXGcUYz9HYUmCs6duNuXninAFXd/ypSevJO8jA8CNVyYip7QtFYkZnxLqDbIL2xM
