Switched development to master branch (dropped gitflow).

--- a/.travis.yml
+++ b/.travis.yml
@@ -94,7 +94,6 @@ script: "mvn -e verify site"
 
 after_script: "mvn -e coveralls:report"
 
-before_deploy:
     - "eval \"$(ssh-agent -s)\""
     - "git config user.name \"Travis CI\""
     - "git config user.email \"office@wrzasq.pl\""
@@ -106,24 +105,12 @@ before_deploy:
     - "chmod 600 .travis/id_rsa"
     - "ssh-add .travis/id_rsa"
     - "echo -e \"Host github.com\\n    StrictHostKeyChecking no\\n\" >> ~/.ssh/config"
+    # this actually does the job, but we need it to produce artifacts for "releases" provider
+    # entire "before_deploy" will not be executed if there is no deploy to be processed
+    - "./.travis/release.sh"
+    - "export TRAVIS_TAG=$(git describe --abbrev=0)"
 
 deploy:
-    -
-        provider: "script"
-        skip_cleanup: true
-        # unfortunately deploy script must be single command
-        script: "./.travis/release.sh"
-        on:
-            branch: "develop"
-            condition: "${TRAVIS_EVENT_TYPE} == push"
-            jdk: "oraclejdk8"
-    -
-        provider: "script"
-        skip_cleanup: true
-        script: "mvn -e deploy site-deploy -P deploy --settings .travis/settings.xml"
-        on:
-            branch: "master"
-            jdk: "oraclejdk8"
     -
         provider: "releases"
         skip_cleanup: true
@@ -132,6 +119,7 @@ deploy:
         file: "*/target/*.jar"
         on:
             branch: "master"
+            condition: "${TRAVIS_EVENT_TYPE} == push"
             jdk: "oraclejdk8"
 
 cache:
