--- a/commons-aws/pom.xml
+++ b/commons-aws/pom.xml
@@ -3,7 +3,7 @@
 # This file is part of the pl.wrzasq.commons.
 #
 # @license http://mit-license.org/ The MIT license
-# @copyright 2017 - 2019 © by Rafał Wrzeszcz - Wrzasq.pl.
+# @copyright 2017 - 2020 © by Rafał Wrzeszcz - Wrzasq.pl.
 -->
 <project
     xmlns="http://maven.apache.org/POM/4.0.0"
@@ -80,6 +80,12 @@
                     <artifactId>aws-java-sdk-s3</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.10.0</version>
         </dependency>
 
         <dependency>
