--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,7 @@
 # This file is part of the pl.wrzasq.commons.
 #
 # @license http://mit-license.org/ The MIT license
-# @copyright 2018 - 2019 © by Rafał Wrzeszcz - Wrzasq.pl.
+# @copyright 2018 - 2020 © by Rafał Wrzeszcz - Wrzasq.pl.
 ##
 
 [*]
@@ -11,3 +11,4 @@ end_of_line=lf
 insert_final_newline=true
 indent_style=space
 indent_size=4
+max_line_length=120
