--- a/commons-aws/pom.xml
+++ b/commons-aws/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>pl.wrzasq.commons</groupId>
         <artifactId>commons</artifactId>
-        <version>1.1.6-SNAPSHOT</version>
+        <version>1.2.0-SNAPSHOT</version>
         <relativePath>../</relativePath>
     </parent>
 
@@ -31,6 +31,12 @@
 
     <!-- project dependencies -->
     <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>commons-json</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>aws-java-sdk-cloudformation</artifactId>
