--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,9 @@ on:
         -
             cron: "0 3 * * 0"
 
+env:
+    AWS_REGION: "eu-central-1"
+
 jobs:
     build:
         if: "!contains(github.event.head_commit.message, '[skip ci]') || (github.event_name == 'schedule')"
@@ -23,7 +26,8 @@ jobs:
             matrix:
                 java:
                     - "11"
-                    - "12"
+                    # Error Prone doesn't work
+                    #- "12"
                     - "13"
                     - "14"
                     # (de)lombok doesn't support Java 15
