Revert "Migration from Travis CI to GitHub Actions."
This reverts commit 35f475168e85033bdf8bdc24134335e7b5fdc5ea.

--- a/pom.xml
+++ b/pom.xml
@@ -17,11 +17,11 @@
     <groupId>pl.wrzasq.commons</groupId>
     <artifactId>commons</artifactId>
     <packaging>pom</packaging>
-    <version>1.2.2-SNAPSHOT</version>
+    <version>1.2.3-SNAPSHOT</version>
     <parent>
         <groupId>pl.wrzasq.parent</groupId>
         <artifactId>parent-opensource</artifactId>
-        <version>1.2.3</version>
+        <version>1.2.0</version>
     </parent>
 
     <!-- project meta info -->
@@ -75,8 +75,8 @@
     </issueManagement>
 
     <ciManagement>
-        <system>GitHub Actions</system>
-        <url>https://github.com/rafalwrzeszcz-wrzasqpl/pl.wrzasq.commons/actions</url>
+        <system>Travis CI</system>
+        <url>https://travis-ci.org/rafalwrzeszcz-wrzasqpl/pl.wrzasq.commons</url>
     </ciManagement>
 
     <scm>
@@ -97,7 +97,7 @@
         </snapshotRepository>
         <site>
             <id>github</id>
-            <url>git:https://github.com/rafalwrzeszcz-wrzasqpl/pl.wrzasq.commons.git?gh-pages#</url>
+            <url>git:ssh://git@github.com/rafalwrzeszcz-wrzasqpl/pl.wrzasq.commons.git?gh-pages#</url>
         </site>
     </distributionManagement>
 
