--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 # This file is part of the pl.wrzasq.commons.
 #
 # @license http://mit-license.org/ The MIT license
-# @copyright 2014 - 2016, 2019 - 2020 © by Rafał Wrzeszcz - Wrzasq.pl.
+# @copyright 2014 - 2016, 2019 © by Rafał Wrzeszcz - Wrzasq.pl.
 ##
 
 # Eclipse IDE files
@@ -17,5 +17,6 @@
 # project builds
 /**/target
 
-# GitHub Actions files
-/.github/gpg_key
+# Travis CI files
+/.travis/gpg_key
+/.travis/id_rsa
