--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -112,3 +112,13 @@ jobs:
                 with:
                     github_token: "${{ secrets.GITHUB_TOKEN }}"
                     branch: "${{ github.ref }}"
+            -
+                id: "tag"
+                run: "echo ::set-output name=ref::$(git describe --abbrev=0)"
+            -
+                uses: "ncipollo/release-action@v1.8.6"
+                with:
+                    tag: "${{ steps.tag.outputs.ref }}"
+                    body: "${{ github.event.head_commit.message }}"
+                    token: "${{ secrets.GITHUB_TOKEN }}"
+                    artifacts: "*/target/*.jar"
