Brang back commons-client library for Feign.

--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@
     <!-- components of WrzasqPl-Commons project -->
     <modules>
         <module>commons-aws</module>
+        <module>commons-client</module>
         <module>commons-json</module>
         <module>commons-text</module>
     </modules>
