--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -42,6 +42,8 @@ jobs:
                     key: "${{ runner.os }}-m2-${{ matrix.java }}"
             -
                 run: "mvn -B -e verify site"
+                env:
+                    AWS_REGION: "eu-central-1"
 
     release:
         if: "(github.event_name == 'push') && (github.event.ref == 'refs/heads/master')"
@@ -82,6 +84,7 @@ jobs:
             -
                 run: "mvn -B -e clean deploy site -P deploy"
                 env:
+                    AWS_REGION: "eu-central-1"
                     GITHUB_ACTOR: "${{ secrets.GITHUB_ACTOR }}"
                     GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
                     OSSRH_USERNAME: "${{ secrets.OSSRH_USERNAME }}"
