Kotlinx.serialization serializers for common Java types.

--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
     <modules>
         <module>commons-aws</module>
         <module>commons-client</module>
+        <module>commons-json</module>
         <module>commons-text</module>
     </modules>
 </project>
