Migrated GitHub Actions to new outputs handling mechanism.

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,7 +2,7 @@
 # This file is part of the pl.wrzasq.commons.
 #
 # @license http://mit-license.org/ The MIT license
-# @copyright 2021 © by Rafał Wrzeszcz - Wrzasq.pl.
+# @copyright 2021, 2023 © by Rafał Wrzeszcz - Wrzasq.pl.
 ##
 
 on:
@@ -117,7 +117,7 @@ jobs:
                     branch: "${{ github.ref }}"
             -
                 id: "tag"
-                run: "echo ::set-output name=ref::$(git describe --abbrev=0)"
+                run: "echo ref=$(git describe --abbrev=0) >> $GITHUB_OUTPUT"
             -
                 uses: "ncipollo/release-action@v1.8.6"
                 with:
