--- a/commons-json/pom.xml
+++ b/commons-json/pom.xml
@@ -3,7 +3,7 @@
 # This file is part of the pl.wrzasq.commons.
 #
 # @license http://mit-license.org/ The MIT license
-# @copyright 2018 - 2020, 2022 © by Rafał Wrzeszcz - Wrzasq.pl.
+# @copyright 2018 - 2020, 2022 - 2023 © by Rafał Wrzeszcz - Wrzasq.pl.
 -->
 <project
     xmlns="http://maven.apache.org/POM/4.0.0"
@@ -34,6 +34,12 @@
         <dependency>
             <groupId>org.jetbrains.kotlinx</groupId>
             <artifactId>kotlinx-serialization-core-jvm</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-serialization-json-jvm</artifactId>
             <version>1.3.2</version>
         </dependency>
     </dependencies>
