--- a/wrzasqpl-commons-aws/Cargo.toml
+++ b/wrzasqpl-commons-aws/Cargo.toml
@@ -12,6 +12,8 @@ edition = "2021"
 license = "MIT"
 description = "AWS-related utility functions for commor routines."
 repository = "https://github.com/rafalwrzeszcz-wrzasqpl/wrzasqpl-commons"
+homepage = "https://wrzasq.pl/"
+readme = "../README.md"
 authors = [
     "Rafał Wrzeszcz <rafal.wrzeszcz@wrzasq.pl>"
 ]
@@ -22,13 +24,13 @@ aws-sdk-dynamodb = "0.28.0"
 aws-smithy-http = "0.55.3"
 env_logger = "0.10.0"
 futures = "0.3.28"
-http = "0.2.8"
+http = "0.2.9"
 lambda_runtime = "0.8.1"
 log = "0.4.19"
-serde = { version = "1.0.164", features = ["derive"] }
+serde = { version = "1.0.171", features = ["derive"] }
 serde_dynamo = { version = "4.2.3", features = ["aws-sdk-dynamodb+0_28"] }
-thiserror = "1.0.40"
-tokio = { version = "1.28.2", features = ["macros"] }
+thiserror = "1.0.43"
+tokio = { version = "1.29.1", features = ["macros"] }
 tokio-stream = "0.1.14"
 tower = "0.4.13"
 tracing = "0.1.37"
@@ -37,8 +39,7 @@ tracing-subscriber = "0.3.17"
 xray-tracing = "0.0.1"
 
 [dev-dependencies]
-async-trait = "0.1.68"
+async-trait = "0.1.71"
 aws-config = "0.55.3"
 aws-smithy-types = "0.55.3"
-http = "0.2.9"
 test-context = "0.1.4"
