--- a/wrzasqpl-commons-aws/Cargo.toml
+++ b/wrzasqpl-commons-aws/Cargo.toml
@@ -20,6 +20,7 @@ authors = [
 keywords = ["aws", "lambda", "dynamodb"]
 
 [dependencies]
+aws-config = "0.55.3"
 aws-sdk-dynamodb = "0.28.0"
 aws-smithy-http = "0.55.3"
 env_logger = "0.10.0"
