--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,6 +16,10 @@ on:
         -
             cron: "0 3 * * 0"
 
+env:
+    SCCACHE_GHA_ENABLED: "true"
+    RUSTC_WRAPPER: "sccache"
+
 jobs:
     build:
         if: "!contains(github.event.head_commit.message, '[skip ci]') || (github.event_name == 'schedule')"
@@ -29,7 +33,9 @@ jobs:
                     toolchain: "nightly"
                     components: "rustfmt, clippy"
             -
-                uses: "Swatinem/rust-cache@v2.5.1"
+                uses: "mozilla-actions/sccache-action@v0.0.3"
+                with:
+                    version: "v0.5.4"
             -
                 run: "make init-cargo"
             -
@@ -79,7 +85,9 @@ jobs:
                 with:
                     toolchain: "nightly"
             -
-                uses: "Swatinem/rust-cache@v2.5.1"
+                uses: "mozilla-actions/sccache-action@v0.0.3"
+                with:
+                    version: "v0.5.4"
             -
                 run: "make init-cargo"
             -
