--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,36 +18,31 @@ on:
 
 env:
     SCCACHE_GHA_ENABLED: "true"
-    RUSTC_WRAPPER: "sccache"
 
 jobs:
     build:
-        if: "!contains(github.event.head_commit.message, '[skip ci]') || (github.event_name == 'schedule')"
         runs-on: "ubuntu-22.04"
+        container:
+            image: "rafalwrzeszczwrzasqpl/build-rust:nightly-v0.0.3"
+            # needed for tarpaulin
+            options: "--security-opt seccomp=unconfined"
+        services:
+            dynamodb:
+                image: "amazon/dynamodb-local:2.0.0"
         steps:
             -
                 uses: "actions/checkout@v3.5.3"
             -
-                uses: "dtolnay/rust-toolchain@v1"
-                with:
-                    toolchain: "nightly"
-                    components: "rustfmt, clippy"
-            -
-                uses: "mozilla-actions/sccache-action@v0.0.3"
-                with:
-                    version: "v0.5.4"
-            -
-                run: "make init-cargo"
+                uses: "crazy-max/ghaction-github-runtime@v2.2.0"
             -
                 run: "make build-dev"
-            -
-                uses: "rrainn/dynamodb-action@v3.0.0"
             -
                 run: "make test"
                 env:
                     AWS_REGION: "eu-central-1"
                     AWS_ACCESS_KEY_ID: "dummy"
                     AWS_SECRET_ACCESS_KEY: "dummy"
+                    DYNAMODB_LOCAL_HOST: "http://dynamodb:8000"
             -
                 uses: "actions-rs/clippy-check@v1.0.7"
                 with:
@@ -72,7 +67,9 @@ jobs:
 
     release:
         if: "(github.event_name == 'push') && (github.event.ref == 'refs/heads/master')"
-        runs-on: "ubuntu-20.04"
+        runs-on: "ubuntu-22.04"
+        container:
+            image: "rafalwrzeszczwrzasqpl/build-rust:nightly-v0.0.3"
         needs: "build"
         permissions:
             contents: "write"
@@ -81,19 +78,12 @@ jobs:
             -
                 uses: "actions/checkout@v3.5.3"
             -
-                uses: "dtolnay/rust-toolchain@v1"
-                with:
-                    toolchain: "nightly"
-            -
-                uses: "mozilla-actions/sccache-action@v0.0.3"
-                with:
-                    version: "v0.5.4"
-            -
-                run: "make init-cargo"
+                uses: "crazy-max/ghaction-github-runtime@v2.2.0"
             -
                 run: |
-                    git config user.name "GitHub Actions"
-                    git config user.email "office@wrzasq.pl"
+                    git config --global user.name "GitHub Actions"
+                    git config --global user.email "office@wrzasq.pl"
+                    git config --global --add safe.directory "$GITHUB_WORKSPACE"
             -
                 run: "cargo workspaces version patch --force '*' --yes --no-individual-tags --tag-prefix 'release-'"
             -
