--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -35,7 +35,7 @@ jobs:
             -
                 uses: "crazy-max/ghaction-github-runtime@v2.2.0"
             -
-                run: "make build-dev"
+                run: "make build"
             -
                 run: "make test"
                 env:
