--- a/wrzasqpl-commons-aws/Cargo.toml
+++ b/wrzasqpl-commons-aws/Cargo.toml
@@ -7,7 +7,7 @@
 
 [package]
 name = "wrzasqpl-commons-aws"
-version = "3.2.9"
+version = "3.3.0"
 edition = "2021"
 license = "MIT"
 description = "AWS-related utility functions for commor routines."
@@ -20,24 +20,23 @@ authors = [
 keywords = ["aws", "lambda", "dynamodb"]
 
 [dependencies]
-aws-config = "0.56.1"
-aws-sdk-dynamodb = "0.33.0"
-aws-smithy-http = "0.56.1"
-env_logger = "0.10.0"
-futures = "0.3.28"
-http = "0.2.9"
-lambda_runtime = "0.8.2"
+aws-config = "1.0.1"
+aws-sdk-dynamodb = "0.39.0"
+aws-smithy-runtime-api = "1.0.1"
+env_logger = "0.10.1"
+futures = "0.3.29"
+lambda_runtime = "0.8.3"
 log = "0.4.20"
-serde = { version = "1.0.188", features = ["derive"] }
-serde_dynamo = { version = "4.2.6", features = ["aws-sdk-dynamodb+0_33"] }
-thiserror = "1.0.49"
-tracing = "0.1.37"
-tracing-core = "0.1.31"
-tracing-subscriber = "0.3.17"
+serde = { version = "1.0.193", features = ["derive"] }
+serde_dynamo = { version = "4.2.12", features = ["aws-sdk-dynamodb+0_39"] }
+thiserror = "1.0.50"
+tracing = "0.1.40"
+tracing-core = "0.1.32"
+tracing-subscriber = "0.3.18"
 xray-tracing = "0.0.1"
 
 [dev-dependencies]
-async-trait = "0.1.73"
-aws-smithy-types = "0.56.1"
+async-trait = "0.1.74"
+aws-smithy-types = "1.0.1"
 test-context = "0.1.4"
-tokio = { version = "1.33.0", features = ["macros"] }
+tokio = { version = "1.34.0", features = ["macros"] }
