--- a/wrzasqpl-commons-aws/Cargo.toml
+++ b/wrzasqpl-commons-aws/Cargo.toml
@@ -7,7 +7,7 @@
 
 [package]
 name = "wrzasqpl-commons-aws"
-version = "3.3.1"
+version = "3.4.0"
 edition = "2021"
 license = "MIT"
 description = "AWS-related utility functions for commor routines."
@@ -21,14 +21,14 @@ keywords = ["aws", "lambda", "dynamodb"]
 
 [dependencies]
 aws-config = "1.0.1"
-aws-sdk-dynamodb = "0.39.0"
-aws-smithy-runtime-api = "1.0.1"
+aws-sdk-dynamodb = "1.3.0"
+aws-smithy-runtime-api = "1.0.2"
 env_logger = "0.10.1"
 futures = "0.3.29"
 lambda_runtime = "0.8.3"
 log = "0.4.20"
 serde = { version = "1.0.193", features = ["derive"] }
-serde_dynamo = { version = "4.2.12", features = ["aws-sdk-dynamodb+0_39"] }
+serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
 thiserror = "1.0.50"
 tracing = "0.1.40"
 tracing-core = "0.1.32"
@@ -37,6 +37,6 @@ xray-tracing = "0.0.1"
 
 [dev-dependencies]
 async-trait = "0.1.74"
-aws-smithy-types = "1.0.1"
+aws-smithy-types = "1.0.2"
 test-context = "0.1.4"
 tokio = { version = "1.34.0", features = ["macros"] }
